[gd_scene load_steps=8 format=2]

[ext_resource path="res://Spatial.gd" type="Script" id=1]
[ext_resource path="res://Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Road.tscn" type="PackedScene" id=3]
[ext_resource path="res://Car.tscn" type="PackedScene" id=4]
[ext_resource path="res://Car.gd" type="Script" id=5]
[ext_resource path="res://Gate.tscn" type="PackedScene" id=6]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 1, 1 )

[node name="Main" type="Spatial" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.058231, -0.0537596, 0.00759888 )
script = ExtResource( 1 )

[node name="Floor" parent="." index="0" instance=ExtResource( 2 )]

[node name="Road" parent="." index="1" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.576552, -9.00245 )

[node name="Road2" parent="." index="2" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.576552, 9.00827 )

[node name="Road3" parent="." index="3" instance=ExtResource( 3 )]

transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -8.99829, 0.576552, -0.012682 )
_sections_unfolded = [ "Transform" ]

[node name="Road4" parent="." index="4" instance=ExtResource( 3 )]

transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 8.98155, 0.576552, -0.012682 )
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera" parent="." index="5"]

transform = Transform( -2.97724e-010, 0.999688, 0.0249666, -1.19212e-008, -0.0249666, 0.999688, 1, 0, 1.19249e-008, 0.0364472, 10.6823, -0.00245231 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 111.478
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="Car" parent="." index="6" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.69666, 9.01522 )
script = ExtResource( 5 )

[node name="Gate" parent="." index="7" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.53302, 2.09428, 6.88324 )

[node name="Area" type="Area" parent="Gate" index="3"]

transform = Transform( 1, 0, 0, 0, 9.81821, 0, 0, 0, 15.4439, 0.205245, -0.483556, 2.51041 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Gate/Area" index="0"]

transform = Transform( 1, 0, 0, 0, 0.166436, 0, 0, 0, 0.180947, -0.121208, 0.0264079, -0.0231315 )
shape = SubResource( 1 )
disabled = false

[node name="Gate2" parent="." index="8" instance=ExtResource( 6 )]

transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 5.53302, 2.09428, -0.601424 )
_sections_unfolded = [ "Transform" ]

[node name="Area3" type="Area" parent="Gate2" index="3"]

transform = Transform( 1, 0, 0, 0, 9.81821, 0, 0, 0, 15.4439, -0.0292598, -0.483556, 2.91551 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Gate2/Area3" index="0"]

transform = Transform( 1, 0, 0, 0, 0.166436, 0, 0, 0, 0.180947, -0.121208, 0.0264079, -0.0231315 )
shape = SubResource( 1 )
disabled = false

[node name="Gate3" parent="." index="9" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.79591, 2.09428, -11.2099 )

[node name="Area2" type="Area" parent="Gate3" index="3"]

transform = Transform( 1, 0, 0, 0, 9.81821, 0, 0, 0, 15.4439, 0.294459, -0.483556, 2.71299 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Gate3/Area2" index="0"]

transform = Transform( 1, 0, 0, 0, 0.166436, 0, 0, 0, 0.180947, -0.121208, 0.0264079, -0.0231315 )
shape = SubResource( 1 )
disabled = false

[node name="Gate4" parent="." index="10" instance=ExtResource( 6 )]

transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -10.8036, 2.09428, -0.601424 )
_sections_unfolded = [ "Transform" ]

[node name="Area4" type="Area" parent="Gate4" index="3"]

transform = Transform( 1, 0, 0, 0, 9.81821, 0, -7.10543e-015, 0, 15.4439, -0.0221788, -0.483556, 2.37374 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Gate4/Area4" index="0"]

transform = Transform( 1, 0, 0, 0, 0.166436, 0, 0, 0, 0.180947, -0.121208, 0.0264079, -0.0231315 )
shape = SubResource( 1 )
disabled = false

[connection signal="body_entered" from="Gate/Area" to="." method="_on_Area_body_entered"]

[connection signal="body_entered" from="Gate2/Area3" to="." method="_on_Area3_body_entered"]

[connection signal="body_entered" from="Gate3/Area2" to="." method="_on_Area2_body_entered"]

[connection signal="body_entered" from="Gate4/Area4" to="." method="_on_Area4_body_entered"]


